; ModuleID = '/home/carl/AnghaBench/toxcore/toxcore/extr_assoc.c_prime_upto_min9.c'
source_filename = "/home/carl/AnghaBench/toxcore/toxcore/extr_assoc.c_prime_upto_min9.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i64)* @prime_upto_min9 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @prime_upto_min9(i64 %0) #0 {
  %2 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  %3 = load i64, i64* %2, align 8
  %4 = load i64, i64* %2, align 8
  %5 = urem i64 %4, 2
  %6 = sub i64 1, %5
  %7 = sub i64 %3, %6
  store i64 %7, i64* %2, align 8
  br label %8

8:                                                ; preds = %13, %1
  %9 = load i64, i64* %2, align 8
  %10 = call i32 @odd_min9_is_prime(i64 %9)
  %11 = icmp ne i32 %10, 0
  %12 = xor i1 %11, true
  br i1 %12, label %13, label %16

13:                                               ; preds = %8
  %14 = load i64, i64* %2, align 8
  %15 = sub i64 %14, 2
  store i64 %15, i64* %2, align 8
  br label %8

16:                                               ; preds = %8
  %17 = load i64, i64* %2, align 8
  ret i64 %17
}

declare dso_local i32 @odd_min9_is_prime(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
